media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/component: indexer
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/component: indexer
        app.kubernetes.io/part-of: media
        app.kubernetes.io/managed-by: kustomize
      annotations:
        backup.velero.io/backup-volumes-excludes: prowlarr-media
    spec:
      securityContext:
        fsGroup: 65534
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: prowlarr-media
          persistentVolumeClaim:
            claimName: pvc-media-nfs
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
      containers:
        - name: prowlarr-server
          image: ghcr.io/hotio/prowlarr:release-2.6.5.5623 # {"$imagepolicy": "flux-system:prowlarr-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-media
              mountPath: /media
            - name: prowlarr-config
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "250m"
